--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/AssociateLoginLog.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/AssociateLoginLog.cshtml
@@ -1,11 +1,11 @@
 ﻿@model HMGreenCityMLM.Models.Reports
+
 @{
-    ViewBag.Title = "TopupReport";
+    ViewBag.Title = "AssociateLoginLog";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
- 
-@using (Html.BeginForm("TopupReport", "AdminReports", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
+@using (Html.BeginForm("AssociateLoginLog", "AdminReports", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
     <br />
     <div class="app-content content">
@@ -24,7 +24,7 @@
                                     <li class="nav-item">
                                         <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
                                            aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">  Topup Reports </span>
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">  Associate Login Log </span>
                                         </a>
                                     </li>
 
@@ -43,22 +43,7 @@
                                                         Name
                                                         @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
                                                     </div>
-                                                    <div class="col-lg-3">
-                                                        Package
-                                                        @Html.DropDownListFor(m => m.Package, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "form-control" })
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        Status
-                                                        @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlstatus, "Value", "Text"), new { @class = "form-control" })
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        From Date
-                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        To Date
-                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
-                                                    </div>
+                                                  
                                                     <div class="col-lg-3">
                                                         <br />
                                                         <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
@@ -68,53 +53,37 @@
 
 
                                                 <div class="dt-responsive table-responsive">
-                                                    <table class="table mb-0" id="example24">
+                                                    <table class="table mb-0" id="example23">
 
                                                         <thead>
                                                             <tr>
                                                                 <th>Sr No.</th>
-                                                                <th>Login Id</th>
                                                                 <th>Name</th>
-                                                                <th>Site Name</th>
-                                                                <th>Sector Name</th>
-                                                                <th>PlotNo</th>
-                                                                <th>Description</th>
-                                                                <th>Upgradation Date</th>
-                                                                <th>Package</th>
-                                                                <th>Price</th>
-                                                                <th>Calculation Status</th>
-                                                                <th>Print</th>
+                                                                <th>Login Id</th>
+                                                                <th>User Type</th>
+                                                                <th>Login Date Time</th>
+                                                                <th>IP</th>
+                                                                <th>Remarks</th>
                                                             </tr>
                                                         </thead>
                                                         <tbody>
                                                             @if (Model != null)
                                                             {
-                                                                if (Model.lsttopupreport != null)
+                                                                if (Model.lstAssociateLoginLog != null)
                                                                 {
                                                                     int i = 1;
-                                                                    foreach (var Item in Model.lsttopupreport)
+                                                                    foreach (var Item in Model.lstAssociateLoginLog)
                                                                     {
                                                                         <tr class="text-left">
                                                                             <td>@i</td>
-                                                                            <td>@Item.LoginId</td>
                                                                             <td>@Item.DisplayName</td>
-                                                                            <td>@Item.SiteName</td>
-                                                                            <td>@Item.SectorName</td>
-                                                                            <td>@Item.PlotNumber</td>
-                                                                            <td>@Item.Description</td>
-                                                                            <td>@Item.UpgradtionDate</td>
+                                                                            <td>@Item.LoginId</td>
+                                                                            <td>@Item.UserType</td>
+                                                                            <td>@Item.LoginDateTime</td>
+                                                                            <td>@Item.IP</td>
+                                                                            <td>@Item.Remarks</td>
 
-                                                                            <td>@Item.Package</td>
-
-                                                                            <td>@Item.Amount</td>
-
-                                                                            <td>@Item.Status</td>
-
-                                                                            <td>
-                                                                                @*<a href="/AdminReports/PrintReciept/@Item.LoginId">Print</a>*@
-                                                                                <a href="/AdminReports/PrintTopUp?ToLoginID=@Item.ToLoginID" class="btn btn-sm btn-primary" target="_blank">Print </a>
-                                                                                @*  <button onclick="changeprintdate('@Item.PrintingDate','@Item.LoginId')">Print</button>*@
-                                                                            </td>
+                                                                           
                                                                         </tr>
                                                                         i++;
                                                                     }
@@ -123,9 +92,9 @@
                                                             }
                                                         </tbody>
                                                     </table>
-                                                    </div>
                                                 </div>
                                             </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -138,32 +107,10 @@
                         <!-- main-panel ends -->
 
 
-    <div id="myModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Change Printing Date</h4>
-                </div>
-                <div class="modal-body">
-                    <input type="text" class="form-control" id="printingdate" readonly />
-                    <input type="hidden" id="hdfloginnid" />
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal" onclick="closepopup();">Close</button>
-                    <button type="button" class="btn btn-success" data-dismiss="modal" onclick="printrecipt();">Print</button>
-                </div>
-            </div>
-
-        </div>
-    </div>
 }
 <style>
     .errortext {
-       border: 2px solid red !important;
-       
+        border: 2px solid red !important;
     }
 </style>
 
@@ -180,9 +127,6 @@
     $('#ToDate').datepicker({
         dateFormat: 'dd/mm/yy',
     });
-
-
-    
 </script>
 <script>
     $(document).ready(function () {
@@ -224,6 +168,8 @@
         });
     }
 </script>
+
+
 
 
 
