--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/Topup.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/Topup.cshtml
@@ -10,8 +10,8 @@
 @using (Html.BeginForm("TopUpByAdmin", "Accounts", FormMethod.Post, new { @id = "form1" }))
 {
 
-    
-   
+
+
     <div class="app-content content">
         <div class="content-overlay"></div>
         <div class="header-navbar-shadow"></div>
@@ -40,13 +40,13 @@
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Topup Type <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
-                                                       <input type="radio" id="rdbtype" name="rdbtype" checked="checked" onclick="return showdetails('RealEstate')"/> Real Estate
-                                                       <input type="radio" id="rdbtype" name="rdbtype" onclick="return showdetails('Product')" /> Product
+                                                        <input type="radio" id="rdbtype" name="rdbtype" checked="checked" onclick="return showdetails('RealEstate')" /> Real Estate
+                                                        <input type="radio" id="rdbtype" name="rdbtype" onclick="return showdetails('Product')" /> Product
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="row" >
+                                        <div class="row">
                                             <div class="col-md-6">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Login Id <span style="color: red">*</span></label>
@@ -73,7 +73,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                          
+
 
                                         </div>
 
@@ -86,7 +86,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                           
+
                                             <div class="col-md-6" id="divplot">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Plot Number <span style="color: red">*</span></label>
@@ -99,52 +99,50 @@
 
                                         </div>
                                         <div class="row">
-                                         
+
                                             <div class="col-md-6">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Amount <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
-                                                        @*@Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "Topup Amount", @onkeypress = "return convertNumberToWords(event);" })*@
+                                                        @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "Topup Amount", @onkeypress = "return isNumberKey(event);", @onchange = "return getAmountinWords();" })
 
-                                                        <input type="text" name="number" id="Amount1" class="form-control" placeholder="Amount" @*onkeypress="word.innerHTML=convertNumberToWords(this.value)"*@ 
-                                                              onkeypress="return isNumberKey(event)" onchange="setAmount()" />
-                                                        @Html.HiddenFor(m => m.Amount)
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            
-                                            <div class="col-md-6">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">Amount in Words</label>
-                                                    <div class="col-sm-9">
-                                                        <div id="word"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                          
-                                            <div class="col-md-6">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">Description </label>
-                                                    <div class="col-sm-9">
-                                                        @Html.HiddenFor(m=>m.TopupType)
-                                                        @Html.TextBoxFor(m => m.Description, new { @class = "form-control", @Placeholder = "Description" })
-                                                    </div>
-                                                </div>
-                                            </div>
-                                           
+                                                        @*<input type="text" name="number" id="Amount1" class="form-control" placeholder="Amount" @*onkeypress="word.innerHTML=convertNumberToWords(this.value)"
+                                                                  onkeypress="return isNumberKey(event)" onchange="setAmount()" />
+                                                            @Html.HiddenFor(m => m.Amount)*@
 
+                                                    </div>
+                                                </div>
+                                            </div>
                                             <div class="col-md-6">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Topup Date <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.TopUpDate, new { @class = "form-control", @Placeholder = "TopUp Date",@readonly="readonly" })
+                                                        @Html.TextBoxFor(m => m.TopUpDate, new { @class = "form-control", @Placeholder = "TopUp Date", @readonly = "readonly" })
                                                     </div>
                                                 </div>
                                             </div>
+
                                         </div>
+                                        
                                         <div class="row">
+                                            <div class="col-md-12">
+                                                <div class="form-group row">
+                                                    <label class="col-sm-3 col-form-label">Amount in Words</label>
+                                                    <div class="col-sm-12">
+                                                        @Html.TextBoxFor(m => m.word, new { @class = "form-control", @placeholder = "Amount in words", @readonly = "readonly" })
+
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-group row">
+                                                    <label class="col-sm-3 col-form-label">Description </label>
+                                                    <div class="col-sm-9">
+                                                        @Html.HiddenFor(m => m.TopupType)
+                                                        @Html.TextBoxFor(m => m.Description, new { @class = "form-control", @Placeholder = "Description" })
+                                                    </div>
+                                                </div>
+                                            </div>
 
                                             <div class="col-md-6">
                                                 <div class="form-group row">
@@ -154,11 +152,16 @@
                                                     </div>
                                                 </div>
                                             </div>
+
+                                        </div>
+                                        <div class="row">
+
+                                           
                                             <div class="col-md-6" id="bankname" style="display: none">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Bank Name <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
-                                                       @Html.TextBoxFor(m => m.BankName, new { @class = "form-control", @placeholder = "Bank Name" })
+                                                        @Html.TextBoxFor(m => m.BankName, new { @class = "form-control", @placeholder = "Bank Name" })
                                                     </div>
                                                 </div>
                                             </div>
@@ -166,7 +169,7 @@
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Transaction No <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
-                                                       @Html.TextBoxFor(m => m.TransactionNo, new { @class = "form-control", @placeholder = "Transaction No" })
+                                                        @Html.TextBoxFor(m => m.TransactionNo, new { @class = "form-control", @placeholder = "Transaction No" })
                                                     </div>
                                                 </div>
                                             </div>
@@ -192,16 +195,16 @@
                                                 </div>
                                             </div>
 
-                                           
+
 
                                             <div class="col-md-4 form-group">
                                                 <span style="color: red">@TempData["Topup"] </span>
                                                 <input class="btn btn-success pull-right" onclick="return validateform()" type="submit" value="Top Up" />
                                             </div>
 
-                                            
+
                                         </div>
-                                        
+
                                     </div>
                                 </div>
                             </div>
@@ -218,8 +221,7 @@
 
 <style>
     .errortext {
-       border: 2px solid red !important;
-       
+        border: 2px solid red !important;
     }
 </style>
 
@@ -240,8 +242,8 @@
     $(document).ready(function () {
         $('#TopupType').val('RealEstate');
     });
-  
-  
+
+
     $('#TopUpDate').datepicker({
         dateFormat: 'dd/mm/yy',
     });
@@ -254,91 +256,7 @@
         $('#Amount').val(amoaunt);
     }
 
-    function convertNumberToWords(amount) {
 
-
-     
-
-        var words = new Array();
-        words[0] = '';
-        words[1] = 'One';
-        words[2] = 'Two';
-        words[3] = 'Three';
-        words[4] = 'Four';
-        words[5] = 'Five';
-        words[6] = 'Six';
-        words[7] = 'Seven';
-        words[8] = 'Eight';
-        words[9] = 'Nine';
-        words[10] = 'Ten';
-        words[11] = 'Eleven';
-        words[12] = 'Twelve';
-        words[13] = 'Thirteen';
-        words[14] = 'Fourteen';
-        words[15] = 'Fifteen';
-        words[16] = 'Sixteen';
-        words[17] = 'Seventeen';
-        words[18] = 'Eighteen';
-        words[19] = 'Nineteen';
-        words[20] = 'Twenty';
-        words[30] = 'Thirty';
-        words[40] = 'Forty';
-        words[50] = 'Fifty';
-        words[60] = 'Sixty';
-        words[70] = 'Seventy';
-        words[80] = 'Eighty';
-        words[90] = 'Ninety';
-        amount = amount.toString();
-        var atemp = amount.split(".");
-        var number = atemp[0].split(",").join("");
-        var n_length = number.length;
-        var words_string = "";
-        if (n_length <= 9) {
-            var n_array = new Array(0, 0, 0, 0, 0, 0, 0, 0, 0);
-            var received_n_array = new Array();
-            for (var i = 0; i < n_length; i++) {
-                received_n_array[i] = number.substr(i, 1);
-            }
-            for (var i = 9 - n_length, j = 0; i < 9; i++, j++) {
-                n_array[i] = received_n_array[j];
-            }
-            for (var i = 0, j = 1; i < 9; i++, j++) {
-                if (i == 0 || i == 2 || i == 4 || i == 7) {
-                    if (n_array[i] == 1) {
-                        n_array[j] = 10 + parseInt(n_array[j]);
-                        n_array[i] = 0;
-                    }
-                }
-            }
-            value = "";
-            for (var i = 0; i < 9; i++) {
-                if (i == 0 || i == 2 || i == 4 || i == 7) {
-                    value = n_array[i] * 10;
-                } else {
-                    value = n_array[i];
-                }
-                if (value != 0) {
-                    words_string += words[value] + " ";
-                }
-                if ((i == 1 && value != 0) || (i == 0 && value != 0 && n_array[i + 1] == 0)) {
-                    words_string += "Crores ";
-                }
-                if ((i == 3 && value != 0) || (i == 2 && value != 0 && n_array[i + 1] == 0)) {
-                    words_string += "Lakhs ";
-                }
-                if ((i == 5 && value != 0) || (i == 4 && value != 0 && n_array[i + 1] == 0)) {
-                    words_string += "Thousand ";
-                }
-                if (i == 6 && value != 0 && (n_array[i + 1] != 0 && n_array[i + 2] != 0)) {
-                    words_string += "Hundred and ";
-                } else if (i == 6 && value != 0) {
-                    words_string += "Hundred ";
-                }
-            }
-            words_string = words_string.split("  ").join(" ");
-        }
-        return words_string;
-    }
 
     function isNumberKey(evt) {
         var charCode = (evt.which) ? evt.which : event.keyCode;
@@ -365,6 +283,22 @@
         }
     }
 
+
+    function getAmountinWords() {
+        var Amount = $('#Amount').val();
+        $.ajax({
+            url: "/Accounts/AmountinWords",
+            Type: "Get",
+            DataType: "JSON",
+            data: { Amount: Amount },
+            success: function (data) {
+                debugger;
+                $('#word').val(data.word);
+            }
+
+        });
+    }
+
     function FillAmount() {
         //$("#Fk_CityId").empty();
         var Productid = "";
@@ -372,12 +306,12 @@
         Productid = $('#Package').val();
         if (Productid == "1") {
 
-           
+
             $("#Amount").val('');
             $("#Amount").attr("disabled", false);
         }
         else {
-           
+
             $("#Amount").attr("disabled", "disabled");
         }
 
@@ -400,8 +334,7 @@
             $('#LoginId').focus();
             return false;
         }
-        if ($('#TopupType').val() == "RealEstate")
-        {
+        if ($('#TopupType').val() == "RealEstate") {
             if ($('#Fk_SiteId').val() == '0') {
                 $("#Fk_SiteId").addClass('errortext');
                 $('#Fk_SiteId').focus();
@@ -412,7 +345,7 @@
                 $('#FK_SectorId').focus();
                 return false;
             }
-           
+
 
             if ($('#PlotNumber').val() == '') {
                 $("#PlotNumber").addClass('errortext');
@@ -420,8 +353,7 @@
                 return false;
             }
         }
-        else
-        {
+        else {
             if ($('#Package').val() == '0') {
                 $("#Package").addClass('errortext');
                 $('#Package').focus();
@@ -430,9 +362,9 @@
         }
 
 
-        if ($('#Amount1').val() == '') {
-            $("#Amount1").addClass('errortext');
-            $('#Amount1').focus();
+        if ($('#Amount').val() == '') {
+            $("#Amount").addClass('errortext');
+            $('#Amount').focus();
             return false;
         }
         if ($('#TopUpDate').val() == '') {
@@ -506,20 +438,17 @@
             }
         });
     }
-    function showdetails(type)
-    {
-        if(type=="Product")
-        {
+    function showdetails(type) {
+        if (type == "Product") {
             $('#divisite').hide();
             $('#divblock').hide();
             $('#divsector').hide();
             $('#divplot').hide();
             $('#divpackage').show();
             $('#TopupType').val('Product');
-           
+
         }
-        else
-        {
+        else {
             $('#divisite').show();
             $('#divblock').show();
             $('#divsector').show();
@@ -546,8 +475,8 @@
             dataType: "JSON",
             data: { Fk_SiteId: $('#Fk_SiteId').val() },
             success: function (data) {
-              
-                $("#FK_SectorId").html(""); // clear before appending new list 
+
+                $("#FK_SectorId").html(""); // clear before appending new list
                 $("#FK_SectorId").empty();
                 $("#FK_SectorId").append(
                       $('<option></option>').val(0).html('Select Sector'));
@@ -556,12 +485,11 @@
                           $('<option></option>').val(BlockCount.Value).html(BlockCount.Text));
                 });
             }
-            
+
         });
         $("#divload").css({ 'display': 'none' });
     }
-    function getblockname()
-    {
+    function getblockname() {
         $("#divload").css({ 'display': '' });
         $.ajax({
             url: '/Accounts/GetBlockName',
@@ -570,7 +498,7 @@
             data: { Fk_SiteId: $('#Fk_SiteId').val(), FK_SectorId: $('#FK_SectorId').val() },
             success: function (data) {
 
-                $("#Fk_BlockId").html(""); // clear before appending new list 
+                $("#Fk_BlockId").html(""); // clear before appending new list
                 $("#Fk_BlockId").empty();
                 $("#Fk_BlockId").append(
                       $('<option></option>').val(0).html('Select Block'));
