--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
@@ -13,6 +13,9 @@
         </div>
         <div class="content-body">
             <section id="dashboard-analytics">
+                <div class="form-group">
+                    <p style="color:red;"> @TempData["DistributePaymentPassword"] </p>
+                </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-12">
                         <div class="card">
