--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Transactions/DistributePaymentPassword.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Transactions/DistributePaymentPassword.cshtml
@@ -70,8 +70,8 @@
                                                         <div class="form-control-position">
                                                             <i class="feather icon-user" style="top: 10px;"></i>
                                                         </div>
-                                                        
-                                                   
+                                                
+                                                        @Html.HiddenFor(m => m.ClosingDate)                                                
                                                     <br />
                                                     <input class="btn cyan waves-effect waves-light left btn-primary" type="submit" value="Validate" id="btnSave" name="btnSave" />
 
@@ -107,5 +107,13 @@
     <!-- END: Theme JS-->
     <!-- BEGIN: Page JS-->
     <!-- END: Page JS-->
+
+    <script>
+
+       
+
+    </script>
+
+    
 </body>
 
