--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- END: Page CSS-->
     <!-- BEGIN: Custom CSS-->
+    <link href="../AssociatePanelcss/assets/css/style.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../../../assets/css/style.css">
     <link href="../../AdminPanelCss/Datatablecss/css/amchart/export.css" rel="stylesheet" />
 
