--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/AssociateListByNew.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/AssociateListByNew.cshtml
@@ -166,7 +166,7 @@
 
     $(document).ready(function () {
         $("input").attr("autocomplete", "off");
-
+        debugger
         var cityuse = [];
         $("#loader").css({ 'display': '' });
         $.ajax({
