--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/AssociateList.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/AssociateList.cshtml
@@ -193,6 +193,12 @@
 
 }
 
+
+<script src="../vendor/jquery/jquery.min.js"></script>
+
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
+
 <script src="../../WebsiteCss/js/jquery.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
@@ -208,6 +214,38 @@
         }
     }
 
+    //$(document).ready(function () {
+    //    $("input").attr("autocomplete", "off");
+
+    //    var cityuse = [];
+    //    $("#loader").css({ 'display': '' });
+    //    $.ajax({
+    //        url: '/AdminProfile/GetUserList',
+    //        type: 'Post',
+    //        success: function (response) {
+    //            if (response != null) {
+
+
+    //                $(response).each(function (index, item) {
+    //                    cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
+    //                });
+
+    //                $('#LoginId').autocomplete({
+    //                    source: cityuse,
+    //                    select: function (event, ui) {
+    //                        var str = ui.item.label;
+    //                        var strsplit = str.split("(");
+
+    //                        $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
+    //                    }
+    //                })
+    //            }
+    //        }, error: function () {
+    //            alert('Some Thing wrong!');
+    //            $("#loader").css({ 'display': 'none' });
+    //        }
+    //    });
+    //});
     $(document).ready(function () {
         $("input").attr("autocomplete", "off");
 
