--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
@@ -151,11 +151,11 @@
     <script src="../../AssociatePanelcss/app-assets/js/core/app-menu.min.js"></script>
     <script src="../../AssociatePanelcss/app-assets/js/core/app.min.js"></script>
     <script src="../../AssociatePanelcss/app-assets/js/scripts/components.min.js"></script>
-    <script>
+    @*<script>
     $(document).ready(function () {
         $("#myModal").modal('show');
     });
-    </script>
+    </script>*@
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
